parser/grammar.js
/**
 * @file The sol3 Programming Language
 * @author Martin Feineis
 * @license UPL-1.0
 */

/// <reference types="tree-sitter-cli/dsl" />
// @ts-check

import {
  LANG,
  keywords,
  operators,
  sym,
  op,
  pkg,
  comparison_operators,
} from "./syntax/spec.mjs";

export default grammar({
  name: LANG,

  word: ($) => $.identifier,

  extras: ($) => [/\s/, $.comment],

  rules: {
    source_file: ($) =>
      choice(
        // One-off scripts without modules
        $.script_decl,
        // One-module-per-file normal modules
        $.module_decl,
        // Applications
        $.application_decl,
        // Experimental modules
        seq(
          $.experimental_module_decl,
          repeat(choice($.experimental_module_decl, $.module_decl)),
        ),
        // Kernel modules
        seq(
          $.kernel_module_decl,
          repeat(
            choice(
              $.kernel_module_decl,
              $.experimental_module_decl,
              $.module_decl,
            ),
          ),
        ),
      ),

    comment: ($) => token(seq(sym.line_comment, /.*/)),

    doc_string: ($) => $._multiline_string_literal,

    keyword: (_) => choice(...Object.values(keywords).flat()),

    operator: (_) => token(choice(...operators)),

    /// #region Modules and Applications

    script_decl: ($) =>
      seq(
        field("signature", optional($.script_signature)),
        repeat1($._toplevel_decl),
      ),

    script_signature: ($) => repeat1($.import_decl),

    module_decl: ($) =>
      seq(field("signature", $.module_signature), repeat($._toplevel_decl)),

    experimental_module_decl: ($) =>
      seq(
        field("signature", $.experimental_module_signature),
        repeat($._toplevel_decl),
      ),

    kernel_module_decl: ($) =>
      seq(
        field("signature", $.kernel_module_signature),
        repeat($._toplevel_decl),
      ),

    application_decl: ($) =>
      seq(
        field("signature", $.application_signature),
        repeat($._toplevel_decl),
      ),

    module_signature: ($) =>
      seq(
        optional(repeat1($.doc_string)),
        sym.module,
        choice(
          seq($.package_identifier, token.immediate(":"), $.module_identifier),
          alias(/[a-z0-9_]+(\/[a-z0-9_]+)*/, $.module_identifier),
        ),
        optional(
          choice(
            repeat1($.export_decl),
            repeat1($.import_decl),
            seq(optional(repeat1($.export_decl)), repeat1($.import_decl)),
          ),
        ),
      ),

    package_identifier: ($) =>
      /[a-zA-Z][a-zA-Z0-9_\-]*(\.[a-zA-Z][a-zA-Z0-9_\-]*)+/,

    module_identifier: ($) => token.immediate(/[a-z0-9_]+(\/[a-z0-9_]+)*/),

    experimental_module_signature: ($) =>
      seq(
        optional(repeat1($.doc_string)),
        sym.module,
        seq(
          alias(pkg.experimental, $.package_identifier),
          token.immediate(":"),
          $.module_identifier,
        ),
        optional(
          choice(
            repeat1($.export_decl),
            repeat1($.import_decl),
            seq(optional(repeat1($.export_decl)), repeat1($.import_decl)),
          ),
        ),
      ),

    kernel_module_signature: ($) =>
      seq(
        optional(repeat1($.doc_string)),
        sym.module,
        seq(
          alias(pkg.lang, $.package_identifier),
          token.immediate(":"),
          $.module_identifier,
        ),
        optional(
          choice(
            repeat1($.export_decl),
            repeat1($.import_decl),
            seq(optional(repeat1($.export_decl)), repeat1($.import_decl)),
          ),
        ),
      ),

    application_signature: ($) =>
      seq(
        // Documentation is not optional for applications
        repeat1($.doc_string),
        sym.application,
        seq($.package_identifier, token.immediate(":"), $.module_identifier),
        optional(
          choice(
            repeat1($.export_decl),
            repeat1($.import_decl),
            seq(optional(repeat1($.export_decl)), repeat1($.import_decl)),
          ),
        ),
      ),

    /// #endregion

    /// #region Imports/Exports

    import_decl: ($) =>
      seq(sym.importing, sym.lcurly, repeat($.import_entry), sym.rcurly),

    import_entry: ($) =>
      seq(
        field("alias", $.import_alias),
        op.field_def,
        field("ref", $.import_module_identifier),
        optional(field("meta", $.import_meta)),
      ),

    import_alias: ($) => $.identifier,

    import_module_identifier: ($) =>
      seq(
        sym.string_open,
        optional(
          seq(choice(pkg.lang, pkg.experimental, $.package_identifier), ":"),
        ),
        $.module_identifier,
        sym.string_close,
      ),

    import_meta: ($) =>
      seq(sym.lcurly, optional($.import_capabilities), sym.rcurly),

    import_capabilities: ($) =>
      seq(
        sym.import_caps,
        op.field_def,
        sym.lcurly,
        repeat($.capability_identifier),
        sym.rcurly,
      ),

    export_decl: ($) =>
      seq(sym.exposing, sym.lcurly, repeat1($.export_entry), sym.rcurly),

    export_entry: ($) =>
      seq(
        field("alias", $.identifier),
        optional(seq(op.field_def, field("ref", $.identifier))),
      ),

    /// #endregion

    /// #region Top-level Declarations

    _toplevel_decl: ($) => choice($.let_decl, $.expect_decl),

    _kernel_toplevel_decl: ($) => $._toplevel_decl,

    let_decl: ($) =>
      seq(
        sym.let,
        field("binding", $.identifier),
        op.eq,
        field("value", $._complex_expr),
      ),

    expect_decl: ($) =>
      seq(
        sym.expect,
        field("condition", $.comparison_expr),
        field("warning", optional(seq(sym.reporting, $._expression))),
      ),

    _complex_expr: ($) => choice($._expression, $.function_expr),

    _expression: ($) => choice($._primitive_value, $.identifier),

    comparison_expr: ($) =>
      seq(
        field("left", $._expression),
        choice(...comparison_operators),
        field("right", $._expression),
      ),

    function_expr: ($) =>
      seq(
        sym.lcurly,
        field("params", $.function_params),
        op.arrow,
        field("body", repeat($._toplevel_decl)),
        field("implicit_return", $._complex_expr),
        sym.rcurly,
      ),

    function_params: ($) =>
      repeat1(choice($.dont_care, $.identifier, $.ignore)),

    _primitive_value: ($) =>
      choice($.string_literal, $.int_literal, $.decimal_literal),

    /// #endregion

    /// #region Terminals

    identifier: (_) => /[a-z][a-zA-Z0-9_]*/,

    int_literal: (_) => /0|-?[1-9]\d*/,

    decimal_literal: (_) => /0|-?\d+\.\d+/,

    dont_care: (_) => sym.dont_care,

    ignore: (_) => token(seq(sym.dont_care, /[a-z][a-zA-Z0-9_]*/)),

    capability_identifier: (_) => token(seq(sym.cap_prefix, /[A-Z][a-zA-Z]*/)),

    // See https://github.com/tree-sitter/tree-sitter-haskell/blob/master/grammar/literal.js#L36
    string_literal: (_) =>
      seq('"', repeat(choice(/[^\\"\n]/, /\\(\^)?./, /\\\n\s*\\/)), '"'),

    // FIXME: We want "simple" utf-8 in the end so this string escape needs to be adjusted, Elm supports something different
    // See https://github.com/elm-tooling/tree-sitter-elm/blob/main/grammar.js#L699
    _multiline_string_literal: ($) =>
      token(
        seq(
          sym.multi_string_open,
          repeat(
            choice(
              alias(
                token.immediate(repeat1(choice(/[^\\"]/, /"[^"]/, /""[^"]/))),
                $.regular_string_part,
              ),
              /\\(u\{[0-9A-Fa-f]{4,6}\}|[nrt\"'\\])/, // valid string escape
              /\\(u\{[^}]*\}|[^nrt\"'\\])/, // invalid string escape
            ),
          ),
          sym.multi_string_close,
        ),
      ),

    /// #endregion
  },
});

/**
 * @param {RuleOrLiteral} separator
 * @param {RuleOrLiteral} rule
 */
function sep1(separator, rule) {
  return seq(rule, repeat(seq(separator, rule)));
}
