parser/test/corpus/basics.txt
===
PTC_A0001: Basic module with included comments
===

module hello

# This comment lives inside the module scope

---

(source_file
  (module_decl
    signature: (module_signature
      (module_identifier)))
  (comment))

===
PTC_A0002: Basic module with module path preceded by a documentation comment
===

"""
Here be wyverns
"""
module my_examples/hello_world

---

(source_file
  (module_decl
    docs: (doc_string)
    signature: (module_signature
      (module_identifier))))

===
PTC_A0003: Basic top-level `let` bindings in a script
===

# A comment
let string = "name"
let integer = 42
let decimal_short = 0.1
let decimal_long = -12.34567890123456789012345678901234567890123456789012345678901234567890123456789

---

(source_file
  (comment)
  (script_decl
    (let_decl
      binding: (identifier)
      value: (string_literal))
    (let_decl
      binding: (identifier)
      value: (int_literal))
    (let_decl
      binding: (identifier)
      value: (decimal_literal))
    (let_decl
      binding: (identifier)
      value: (decimal_literal))))

===
PTC_A0004: Decimals behave as close to mathematical numbers as technically feasible
:error
===

let decimal_no_negative_zero = -0
let decimal_no_bottom_element = NaN

---


===
PTC_A0005: Top-level expectations in a script
===

expect 42 == 42
expect 1 == 2 reporting "Expectations can emit warnings"
expect 1 != 1 reporting "Your maths do not maths"

---

(source_file
  (script_decl
    (expect_decl
      condition: (comparison_expr
        left: (int_literal)
        right: (int_literal)))
    (expect_decl
      condition: (comparison_expr
        left: (int_literal)
        right: (int_literal))
      warning: (string_literal))
    (expect_decl
      condition: (comparison_expr
        left: (int_literal)
        right: (int_literal))
      warning: (string_literal))))

===
PTC_A0006: Top-level `let` bindings to a function expression
===

let hello = { _ ->
  # A comment
  "Hello, World"
}

---

(source_file
  (script_decl
    (let_decl
      binding: (identifier)
      value: (function_expr
        params: (function_params
          (dont_care))
        (comment)
        implicit_return: (string_literal)))))

===
PTC_A0007: Function expressions with explicitly ignored and "don't care" parameters
===

let hello = { _ _ignored who ->
  let unused_var = 1
  let subject = who
  42
}

---

(source_file
  (script_decl
    (let_decl
      binding: (identifier)
      value: (function_expr
        params: (function_params
          (dont_care)
          (ignore)
          (identifier))
        body: (let_decl
          binding: (identifier)
          value: (int_literal))
        body: (let_decl
          binding: (identifier)
          value: (identifier))
        implicit_return: (int_literal)))))
