parser/test/corpus/modules.txt
===
PTC_B0001: Source files may only contain one module at a time
:error
===

module some_module

module another_modules

---

(source_file
  (ERROR
    (module_decl
      (module_signature
        (module_identifier))))
  (module_decl
    (module_signature
      (module_identifier))))

===
PTC_B0002: Modules may live inside java-style reverse-url-prefixed namespace packages
===

module com.example:some_module

---

(source_file
  (module_decl
    signature: (module_signature
      (package_identifier)
      (module_identifier))))

===
PTC_B0003: Modules inside the special "experimental" package have access to privileged internal implementation language features
===

module experimental:some_module

---

(source_file
  (experimental_module_decl
    signature: (experimental_module_signature
      (package_identifier)
      (module_identifier))))

===
PTC_B0004: Source files may contain multiple experimental modules
===

module experimental:module1

module experimental:module2

---

(source_file
  (experimental_module_decl
    (experimental_module_signature
      (package_identifier)
      (module_identifier)))
  (experimental_module_decl
    (experimental_module_signature
      (package_identifier)
      (module_identifier))))

===
PTC_B0005: Modules inside the "sol3" package are privileged kernel modules with access to internal implementation language features
===

module sol3:kernel_module

---

(source_file
  (kernel_module_decl
    signature: (kernel_module_signature
      (package_identifier)
      (module_identifier))))

===
PTC_B0006: Source files may contain multiple kernel modules
===

module sol3:module1

module sol3:module2

---

(source_file
  (kernel_module_decl
    signature: (kernel_module_signature
      (package_identifier)
      (module_identifier)))
  (kernel_module_decl
    signature: (kernel_module_signature
      (package_identifier)
      (module_identifier))))

===
PTC_B0007: Source files may contain a single application with mandatory documentation, package and name
===

"""
Mandatory application documentation
"""

application org.example:app

---

(source_file
  (application_decl
    signature: (application_signature
      (doc_string)
      (package_identifier)
      (module_identifier))))

===
PTC_B0008: Modules may not import dependencies before declaring their exposed bindings
:error
===

module example

import {
  lib: "lib"
}

exposing {
  main
}

let main = "Hello"

---

(source_file
  (module_decl
    signature: (module_signature
      (module_identifier)
      (ERROR
        (identifier)
        (identifier)
        (identifier))
      (export_decl
        (export_entry
          alias: (identifier))))
    (let_decl
      binding: (identifier)
      value: (string_literal))))


===
PTC_B0009: Modules may expose bindings and import dependencies in exactly that order
===

module example

exposing {
  main
}

importing {
  lib: "acme/lib"
}

let main = "Hello"

---

(source_file
  (module_decl
    signature: (module_signature
      (module_identifier)
      (export_decl
        (export_entry
          alias: (identifier)))
      (import_decl
        (import_entry
          alias: (import_alias
            (identifier))
          ref: (import_module_identifier
            (module_identifier)))))
    (let_decl
      binding: (identifier)
      value: (string_literal))))

===
PTC_B0010: Application may expose bindings and import dependencies in exactly that order
===

"""
Mandatory application documentation
"""

application org.example:app

exposing { main }

importing {
  lib: "acme/lib"
}

let main = "Hello"

---

(source_file
  (application_decl
    signature: (application_signature
      (doc_string)
      (package_identifier)
      (module_identifier)
      (export_decl
        (export_entry
          alias: (identifier)))
      (import_decl
        (import_entry
          alias: (import_alias
            (identifier))
          ref: (import_module_identifier
            (module_identifier)))))
    (let_decl
      binding: (identifier)
      value: (string_literal))))
